--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
-$node: #ff5f5f;
-$colors: language #294a66, tool #0060ca, framework #6a9c78;
+$node: #294a66;
+$colors: language #ff5f5f, tool #0060ca, framework #6a9c78;
 
 body, html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -27,6 +27,29 @@ body, html {
 
 .header__jobs {
   margin-left: auto;
+
+  a {
+    cursor: pointer;
+  }
+
+  a::after {
+    content: '|';
+    margin-left: 10px;
+    margin-right: 10px;
+    opacity: .5;
+  }
+
+  a:last-child::after {
+    display: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  a.is-active {
+    font-weight: bold;
+  }
 }
 
 .header__search {
@@ -53,6 +76,37 @@ body, html {
 
   &:hover {
     box-shadow: 0 5px 10px #736cc766;
+  }
+}
+
+/* Footer
+   ========================================================================== */
+.footer {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.footer__legend {
+  display: inline-block;
+  margin-left: 10px;
+  &::before {
+    content:'';
+    display: inline-block;
+    vertical-align: middle;
+    background-color: $node;
+    color: darken($node, 15);
+    width: 20px;
+    height: 5px;
+    border: 1px solid darken($node, 15);
+  }
+}
+
+@each $color in $colors {
+  .footer__legend.is-#{nth($color, 1)}::before{
+    background-color: nth($color, 2);
+    border-color: darken(nth($color, 2), 15);
+    color: darken(nth($color, 2), 15);
   }
 }
 
@@ -84,6 +138,12 @@ body, html {
     stroke-width: 2px;
     stroke: darken(nth($color, 2), 15);
   }
+}
+
+.node-source .outline {
+  fill: #000;
+  stroke-width: 2px;
+  stroke: #000;
 }
 
 .links line {
