--- a/src/main.scss
+++ b/src/main.scss
@@ -171,3 +171,17 @@ body, html {
 svg {
   cursor: all-scroll;
 }
+
+div.tooltip { 
+    position: absolute;     
+    text-align: center;
+    color: black;
+    width: 160px;          
+    height: auto;         
+    padding: 5px;       
+    font: 12px sans-serif;    
+    background: #f0f6ff; 
+    border: 1px solid grey;    
+    border-radius: 8px;     
+    pointer-events: none;     
+}
